--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 .main {
     background: #fff;
     width: 90%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 10px auto 0;
     border-radius: 10px;
     padding: 30px;
@@ -35,6 +35,7 @@ body {
 
 img {
     width: 100%;
+    height: 200px;
 }
 
 .content {
@@ -43,7 +44,7 @@ img {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
-    max-width: 500px;
+    max-width: 800px;
 }
 
 .content h2 {
